# initial-settings

./: .gitignore  .mcp.json  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json
.claude/agents/: code-reviewer.md  tidyings-refactor-analyzer.md
.claude/commands/: refactor.md  review.md
.github/workflows/: claude-code-review.yml  claude.yml
docs/: 参考.md
z/: tdd.md  tidyings.md
